--- a/Cupcake/src/main/resources/templates/order.html
+++ b/Cupcake/src/main/resources/templates/order.html
@@ -147,7 +147,7 @@
                             <p class="cupcake-desc guac-pt-3" th:text="${p.description}"></p>
                             <p class="cupcake-price guac-pt-3" th:text="${p.price + ' kr'}"></p>
                             <button type="button" class="add-product"
-                                    th:attr="data-id=${p.id}, data-name=${p.name}, data-price=${p.price}, data-description=${p.description}"
+                                    th:attr="data-id=${p.id}, data-name=${p.name}, data-price=${p.price}, data-description=${p.description}, data-topping=${p.topping_id}, data-bottom=${p.bottom_id}"
                                     onclick="callJavaMethod('/cart/add', this)">
                                 Tilføj til kurv
                             </button>
