Fixed Ebou / Andreas bs merge

--- a/Cupcake/src/main/resources/templates/custom.html
+++ b/Cupcake/src/main/resources/templates/custom.html
@@ -16,6 +16,9 @@
     <link rel="icon" href="/images/icons/cupcake-1.png" type="image/x-icon"> <!-- That little logo thats next to the title in URL -->
     <link rel="apple-touch-icon" href="/images/icons/cupcake-1.png">
 
+    <!-- Font Awesome -->
+    <link rel="stylesheet" href=css/font-awesome-4.7.0.min.css>
+
     <!-- CSS Load -->
     <link rel="stylesheet" href="/css/style.css">
 
@@ -26,6 +29,8 @@
 
     <!-- Script -->
     <script src="/js/custom.js" defer></script>
+    <script src="js/cart.js" defer></script>
+    <script src="js/order.js" defer></script>
 
     <!-- Modules -->
     <script type="module" src="/js/components/navbar.js" defer></script>
@@ -130,6 +135,14 @@
     <!-- Footer Nav -->
     <div id="footer-nav-component"></div>
     <!-- Next Section End -->
+
+    <!-- Cart Button Start -->
+    <div class="cart-btn-wrapper"></div>
+    <!-- Cart Button End -->
+
+    <!-- Shopping Cart -->
+    <div id="cart-container"></div>
+    <!-- Shopping Cart -->
 
 
 </body>
