--- a/Cupcake/src/main/resources/static/css/style.css
+++ b/Cupcake/src/main/resources/static/css/style.css
@@ -152,7 +152,7 @@
 
 html, body {
     font-family: 'Itim', cursive !important; /* Site Identity DO NOT REMOVE */
-    background: url(../images/backgrounds/4-upgrade-2.png) no-repeat center 70% fixed;
+    background: url(../images/textures/background-texture-1.svg) no-repeat center 70% fixed;
     background-color: var(--background) !important;
     background-size: cover;
     overflow-x: hidden !important;
@@ -193,7 +193,7 @@ body::-webkit-scrollbar { /* All other browsers */
 .index-cupcake-1 img {
     width: 60%;
     height: auto;
-    transform: translateY(40%) rotate(-190deg);
+    transform: translateY(80%);
 }
 
 .index-cupcake-2 img {
@@ -656,6 +656,7 @@ body::-webkit-scrollbar { /* All other browsers */
     border-bottom: 2px solid rgba(255, 255, 255, 0.7);
     color: rgba(255, 255, 255, 0.9);
     font-family: 'Itim', cursive !important;
+    font-size: 1rem;
     border-radius: 0;
     padding: 0.5rem 0;
     width: 100%;
@@ -730,6 +731,8 @@ body::-webkit-scrollbar { /* All other browsers */
 /* ___________________________________________ */
 
 .visuals-tak {
+    background-color: var(--background) !important;
+    background: url("../images/textures/background-texture-1.svg");
     height: 100vh; /* Very important DO NOT REMOVE */
     overflow: hidden !important;
 }
@@ -1816,6 +1819,7 @@ body::-webkit-scrollbar { /* All other browsers */
     border-radius: 25px;
     overflow: hidden;
     display: flex;
+    min-height: 34.375rem;
     flex-direction: column;
     align-items: center;
     font-family: 'Poppins', sans-serif;
@@ -2049,16 +2053,16 @@ body::-webkit-scrollbar { /* All other browsers */
     flex-wrap: wrap;
     gap: 5rem !important;
     justify-content: center;
-    align-items: flex-start;
+    align-items: stretch;
 }
 
 .cupcake-form-box {
-    flex: 1 1 300px;
-    max-width: 350px;
+    flex: 1 1 18.75rem;
+    min-width: 21.875rem;
+    display: flex;
 }
 
 .cupcake-preview {
-    min-height: 19rem !important; /* Change later to non-hardcoded height */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -2073,6 +2077,11 @@ body::-webkit-scrollbar { /* All other browsers */
     width: 70%;
     height: auto;
     border-radius: 1rem;
+}
+
+.cupcake-form,
+.cupcake-preview {
+    flex: 1;
 }
 
 /* ___________________________________________ */
