--- a/Cupcake/src/main/resources/templates/events.html
+++ b/Cupcake/src/main/resources/templates/events.html
@@ -71,59 +71,59 @@
                                 <img src="/images/page-content/events/event-card-1.png" alt="Autumn Cupcake Fair">
                                 <div class="event-badge">12/10-2025</div>
                             </div>
-                                <div class="guac-card-title">Cupcake Eating Contest</div>
-                                <div class="guac-card-text">
-                                    Whos the fattest of the fattest? 90min. Eat as many as u can, fatty.
-                                </div>
-                            <a href="#" class="guac-btn guac-btn-event guac-mt-2">Join Now</a>
+                            <div class="guac-card-title">Cupcake Smagning</div>
+                            <div class="guac-card-text">
+                                Smag vores nye cupcakes og stem på din favorit.
+                            </div>
+                            <a href="#" class="guac-btn guac-btn-event guac-mt-2">Tilmeld dig</a>
                         </div>
 
                         <div class="guac-card event-card">
                             <div class="event-image-container">
-                                <img src="/images/page-content/events/narko.png" alt="Autumn Cupcake Fair">
+                                <img src="/images/page-content/events/narko.png" alt="Chocolate Dipping Event">
                                 <div class="event-badge">20/10-2025</div>
                             </div>
-                            <div class="guac-card-title">Chocolate Dipping</div>
+                            <div class="guac-card-title">Chokolade Dypning</div>
                             <div class="guac-card-text">
-                                Dip your balls in chocolate and make a mold for a loved one!
+                                Lær at dyppe cupcakes i lækker chokolade.
                             </div>
-                            <a href="#" class="guac-btn guac-btn-event guac-mt-2">Reserve Spot</a>
+                            <a href="#" class="guac-btn guac-btn-event guac-mt-2">Reserver plads</a>
                         </div>
 
                         <div class="guac-card event-card">
                             <div class="event-image-container">
-                                <img src="/images/page-content/events/fff.png" alt="Autumn Cupcake Fair">
+                                <img src="/images/page-content/events/fff.png" alt="Cupcake Giveaway">
                                 <div class="event-badge">31/10-2025</div>
                             </div>
-                            <div class="guac-card-title">#BLM Meeting</div>
+                            <div class="guac-card-title">Cupcake Uddeling</div>
                             <div class="guac-card-text">
-                                let's get it! yesssirrrrski. Whatever. This is a text.
+                                Få gratis cupcakes til Halloween.
                             </div>
-                            <a href="#" class="guac-btn guac-btn-event guac-mt-2">Learn More</a>
+                            <a href="#" class="guac-btn guac-btn-event guac-mt-2">Læs mere</a>
                         </div>
 
                         <div class="guac-card event-card">
                             <div class="event-image-container">
-                                <img src="/images/page-content/events/narko-2.png" alt="Autumn Cupcake Fair">
+                                <img src="/images/page-content/events/narko-2.png" alt="Cupcake Workshop">
                                 <div class="event-badge">04/11-2025</div>
                             </div>
-                            <div class="guac-card-title">#BLM Meeting</div>
+                            <div class="guac-card-title">Cupcake Workshop</div>
                             <div class="guac-card-text">
-                                let's get it! yesssirrrrski. Whatever. This is a text.
+                                Lav dine egne cupcakes med vores tips.
                             </div>
-                            <a href="#" class="guac-btn guac-btn-event guac-mt-2">Learn More</a>
+                            <a href="#" class="guac-btn guac-btn-event guac-mt-2">Tilmeld dig</a>
                         </div>
 
                         <div class="guac-card event-card">
                             <div class="event-image-container">
-                                <img src="/images/page-content/events/aaa.png" alt="Autumn Cupcake Fair">
+                                <img src="/images/page-content/events/aaa.png" alt="Cupcake Fest">
                                 <div class="event-badge">11/11-2025</div>
                             </div>
-                            <div class="guac-card-title">#BLM Meeting</div>
+                            <div class="guac-card-title">Cupcake Fest</div>
                             <div class="guac-card-text">
-                                let's get it! yesssirrrrski. Whatever. This is a text.
+                                Fejr vores nye cupcakes med os.
                             </div>
-                            <a href="#" class="guac-btn guac-btn-event guac-mt-2">Learn More</a>
+                            <a href="#" class="guac-btn guac-btn-event guac-mt-2">Læs mere</a>
                         </div>
 
                     </div>
